y-spacing and fixing text content

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -41,7 +41,3 @@
     display: none;
   }
 }
-
-.mt-1 {
-  margin-top: 1rem;
-}
