--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -12,6 +12,7 @@
   &-primary {
     --direction: row;
     --justify: center;
+    --align: center;
 
     border: none;
     border-radius: $border-radius;
