--- a/scss/components/_cart.scss
+++ b/scss/components/_cart.scss
@@ -141,6 +141,7 @@
 
     font-size: var(--fs-500);
     font-weight: 700;
+    line-height: 1.5;
     color: $Very-dark-blue;
 
     background-color: $Light-grayish-blue;
